--- a/main.html
+++ b/main.html
@@ -11,10 +11,10 @@
 	<h1>Paris, France</h1><br>
 	<p>Paris, the capital of France, is known for its beautiful architecture, rich history, and vibrant culture. It's a city that attracts millions of tourists each year with its iconic landmarks, romantic atmosphere, and world-class museums. Whether you're visiting the Eiffel Tower, exploring the Louvre, or simply enjoying a café by the Seine, Paris offers a unique blend of history and modernity.</p>
 	<ol>
-        <li><strong>Eiffel Tower</strong> - A symbol of Paris, the <em>Eiffel Tower</em> offers breathtaking views of the city.</li>
+        <li><strong>Eiffel Tower</strong> - A symbol of <i>Paris</i>, the <em>Eiffel Tower</em> offers breathtaking views of the city.</li>
         <li><strong>Louvre Museum</strong> - Home to the <em>Mona Lisa</em> and thousands of priceless works of art.</li>
         <li><strong>Notre-Dame Cathedral</strong> - A masterpiece of Gothic architecture with stunning <em>stained-glass windows</em>.</li>
-        <li><strong>Montmartre</strong> - A historic district known for its <em>charming streets</em> and the famous Sacré-Cœur Basilica.</li>
+        <li><strong>Montmartre</strong> - A historic district known for its <em>charming streets</em> and the famous <b>Sacré-Cœur Basilica.</b></li>
         <li><strong>Champs-Élysées</strong> - One of the most famous avenues in the world, leading to the <em>Arc de Triomphe</em>.</li>
     </ol>
 
